freshParser.py
# Generated from fresh.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class freshParser ( Parser ):

    grammarFileName = "fresh.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'main'", "'('", "')'", "'None'", 
                     "'{'", "'}'", "';'", "','", "'var'", "'='", "'if'", 
                     "'elif'", "'else'", "'for'", "'in'", "'print'", "'or'", 
                     "'and'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'*'", "'/'", "'not'", "'+='", "'-='", 
                     "'*='", "'/='", "'++'", "'--'", "'int'", "'float'", 
                     "'bool'", "'auto'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NAME", "INTEGER", "DOUBLE", "BOOL", 
                      "STRING", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_function_list = 1
    RULE_main_function = 2
    RULE_function = 3
    RULE_function_call = 4
    RULE_argument_list = 5
    RULE_argument = 6
    RULE_statements = 7
    RULE_statement = 8
    RULE_var_declaration = 9
    RULE_if_statement = 10
    RULE_for_loop_statement = 11
    RULE_print = 12
    RULE_expression_list = 13
    RULE_expression = 14
    RULE_or_expression = 15
    RULE_and_expression = 16
    RULE_eq_expression = 17
    RULE_rel_expression = 18
    RULE_add_expression = 19
    RULE_mul_expression = 20
    RULE_un_expression = 21
    RULE_basic_expression = 22
    RULE_compound_assignment = 23
    RULE_postfix_expression = 24
    RULE_var_reference = 25
    RULE_type = 26

    ruleNames =  [ "program", "function_list", "main_function", "function", 
                   "function_call", "argument_list", "argument", "statements", 
                   "statement", "var_declaration", "if_statement", "for_loop_statement", 
                   "print", "expression_list", "expression", "or_expression", 
                   "and_expression", "eq_expression", "rel_expression", 
                   "add_expression", "mul_expression", "un_expression", 
                   "basic_expression", "compound_assignment", "postfix_expression", 
                   "var_reference", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    NAME=41
    INTEGER=42
    DOUBLE=43
    BOOL=44
    STRING=45
    COMMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_function(self):
            return self.getTypedRuleContext(freshParser.Main_functionContext,0)


        def EOF(self):
            return self.getToken(freshParser.EOF, 0)

        def function_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.Function_listContext)
            else:
                return self.getTypedRuleContext(freshParser.Function_listContext,i)


        def getRuleIndex(self):
            return freshParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = freshParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 54
                self.function_list()


            self.state = 57
            self.main_function()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 58
                self.function_list()


            self.state = 61
            self.match(freshParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.FunctionContext)
            else:
                return self.getTypedRuleContext(freshParser.FunctionContext,i)


        def getRuleIndex(self):
            return freshParser.RULE_function_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_list" ):
                listener.enterFunction_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_list" ):
                listener.exitFunction_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_list" ):
                return visitor.visitFunction_list(self)
            else:
                return visitor.visitChildren(self)




    def function_list(self):

        localctx = freshParser.Function_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 63
                    self.function()

                else:
                    raise NoViableAltException(self)
                self.state = 66 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(freshParser.StatementsContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_main_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function" ):
                listener.enterMain_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function" ):
                listener.exitMain_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_function" ):
                return visitor.visitMain_function(self)
            else:
                return visitor.visitChildren(self)




    def main_function(self):

        localctx = freshParser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(freshParser.T__0)
            self.state = 69
            self.match(freshParser.T__1)
            self.state = 70
            self.match(freshParser.T__2)
            self.state = 71
            self.match(freshParser.T__3)
            self.state = 72
            self.match(freshParser.T__4)
            self.state = 73
            self.match(freshParser.T__5)
            self.state = 74
            self.statements()
            self.state = 75
            self.match(freshParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(freshParser.NAME, 0)

        def type_(self):
            return self.getTypedRuleContext(freshParser.TypeContext,0)


        def statements(self):
            return self.getTypedRuleContext(freshParser.StatementsContext,0)


        def argument_list(self):
            return self.getTypedRuleContext(freshParser.Argument_listContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = freshParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(freshParser.T__0)
            self.state = 78
            self.match(freshParser.NAME)
            self.state = 79
            self.match(freshParser.T__2)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 80
                self.argument_list()


            self.state = 83
            self.match(freshParser.T__3)
            self.state = 84
            self.type_()
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.state = 85
                self.match(freshParser.T__7)
                pass
            elif token in [6]:
                self.state = 86
                self.match(freshParser.T__5)
                self.state = 87
                self.statements()
                self.state = 88
                self.match(freshParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(freshParser.NAME, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(freshParser.ExpressionContext,i)


        def getRuleIndex(self):
            return freshParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = freshParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(freshParser.NAME)
            self.state = 93
            self.match(freshParser.T__2)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 68170928881672) != 0):
                self.state = 94
                self.expression()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 95
                    self.match(freshParser.T__8)
                    self.state = 96
                    self.expression()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 104
            self.match(freshParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Argument_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(freshParser.ArgumentContext,i)


        def getRuleIndex(self):
            return freshParser.RULE_argument_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument_list" ):
                listener.enterArgument_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument_list" ):
                listener.exitArgument_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument_list" ):
                return visitor.visitArgument_list(self)
            else:
                return visitor.visitChildren(self)




    def argument_list(self):

        localctx = freshParser.Argument_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argument_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.argument()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 107
                self.match(freshParser.T__8)
                self.state = 108
                self.argument()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(freshParser.NAME, 0)

        def type_(self):
            return self.getTypedRuleContext(freshParser.TypeContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = freshParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(freshParser.NAME)
            self.state = 115
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.StatementContext)
            else:
                return self.getTypedRuleContext(freshParser.StatementContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(freshParser.WS)
            else:
                return self.getToken(freshParser.WS, i)

        def getRuleIndex(self):
            return freshParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = freshParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.statement()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==47:
                    self.state = 118
                    self.match(freshParser.WS)


                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 168960) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(freshParser.If_statementContext,0)


        def for_loop_statement(self):
            return self.getTypedRuleContext(freshParser.For_loop_statementContext,0)


        def var_declaration(self):
            return self.getTypedRuleContext(freshParser.Var_declarationContext,0)


        def print_(self):
            return self.getTypedRuleContext(freshParser.PrintContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = freshParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.if_statement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.for_loop_statement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.var_declaration()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.print_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(freshParser.NAME, 0)

        def type_(self):
            return self.getTypedRuleContext(freshParser.TypeContext,0)


        def expression(self):
            return self.getTypedRuleContext(freshParser.ExpressionContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_var_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaration" ):
                listener.enterVar_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaration" ):
                listener.exitVar_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaration" ):
                return visitor.visitVar_declaration(self)
            else:
                return visitor.visitChildren(self)




    def var_declaration(self):

        localctx = freshParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_declaration)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(freshParser.T__9)
                self.state = 132
                self.match(freshParser.NAME)
                self.state = 133
                self.type_()
                self.state = 134
                self.match(freshParser.T__10)
                self.state = 135
                self.expression()
                self.state = 136
                self.match(freshParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(freshParser.T__9)
                self.state = 139
                self.match(freshParser.NAME)
                self.state = 140
                self.type_()
                self.state = 141
                self.match(freshParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(freshParser.T__9)
                self.state = 144
                self.match(freshParser.NAME)
                self.state = 145
                self.match(freshParser.T__10)
                self.state = 146
                self.expression()
                self.state = 147
                self.match(freshParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(freshParser.ExpressionContext,i)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.StatementsContext)
            else:
                return self.getTypedRuleContext(freshParser.StatementsContext,i)


        def getRuleIndex(self):
            return freshParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = freshParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(freshParser.T__11)
            self.state = 152
            self.match(freshParser.T__2)
            self.state = 153
            self.expression()
            self.state = 154
            self.match(freshParser.T__3)
            self.state = 155
            self.match(freshParser.T__5)
            self.state = 156
            self.statements()
            self.state = 157
            self.match(freshParser.T__6)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 158
                self.match(freshParser.T__12)
                self.state = 159
                self.match(freshParser.T__2)
                self.state = 160
                self.expression()
                self.state = 161
                self.match(freshParser.T__3)
                self.state = 162
                self.match(freshParser.T__5)
                self.state = 163
                self.statements()
                self.state = 164
                self.match(freshParser.T__6)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 171
                self.match(freshParser.T__13)
                self.state = 172
                self.match(freshParser.T__5)
                self.state = 173
                self.statements()
                self.state = 174
                self.match(freshParser.T__6)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loop_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(freshParser.TypeContext,0)


        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(freshParser.NAME)
            else:
                return self.getToken(freshParser.NAME, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(freshParser.ExpressionContext,i)


        def statements(self):
            return self.getTypedRuleContext(freshParser.StatementsContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_for_loop_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop_statement" ):
                listener.enterFor_loop_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop_statement" ):
                listener.exitFor_loop_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop_statement" ):
                return visitor.visitFor_loop_statement(self)
            else:
                return visitor.visitChildren(self)




    def for_loop_statement(self):

        localctx = freshParser.For_loop_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_for_loop_statement)
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(freshParser.T__14)
                self.state = 179
                self.match(freshParser.T__2)
                self.state = 180
                self.type_()
                self.state = 181
                self.match(freshParser.NAME)
                self.state = 182
                self.match(freshParser.T__10)
                self.state = 183
                self.expression()
                self.state = 184
                self.match(freshParser.T__7)
                self.state = 185
                self.expression()
                self.state = 186
                self.match(freshParser.T__7)
                self.state = 187
                self.expression()
                self.state = 188
                self.match(freshParser.T__3)
                self.state = 189
                self.match(freshParser.T__5)
                self.state = 190
                self.statements()
                self.state = 191
                self.match(freshParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.match(freshParser.T__14)
                self.state = 194
                self.match(freshParser.T__2)
                self.state = 195
                self.type_()
                self.state = 196
                self.match(freshParser.NAME)
                self.state = 197
                self.match(freshParser.T__15)
                self.state = 198
                self.match(freshParser.NAME)
                self.state = 199
                self.match(freshParser.T__3)
                self.state = 200
                self.match(freshParser.T__5)
                self.state = 201
                self.statements()
                self.state = 202
                self.match(freshParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(freshParser.Expression_listContext,0)


        def getRuleIndex(self):
            return freshParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = freshParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.match(freshParser.T__16)
            self.state = 207
            self.match(freshParser.T__2)
            self.state = 208
            self.expression_list()
            self.state = 209
            self.match(freshParser.T__3)
            self.state = 210
            self.match(freshParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(freshParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(freshParser.ExpressionContext,i)


        def getRuleIndex(self):
            return freshParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)




    def expression_list(self):

        localctx = freshParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expression_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 212
            self.expression()
            self.state = 217
            self._errHandler.sync(self)
            _la = self._input.LA(1)
